common/api: feat: add DELETE /admin/hosts/{hostname}
